--------------------------------------------------------------------------------
drkns 2024-08-15 01:55:21+01:00 - build 6359

1. gh-864: Confusion between ² and ' keys on AZERTY (french) keyboard for Macro Shortcuts.

2. Various refactoring, related to #1.

--------------------------------------------------------------------------------
yjh 2024-08-14 00:19:45+03:00 - build 6358

1. SQLite 3.46.1

--------------------------------------------------------------------------------
drkns 2024-08-13 01:07:52+01:00 - build 6357

1. Refactoring.

--------------------------------------------------------------------------------
drkns 2024-08-11 13:32:00+01:00 - build 6356

1. Continue 6355.

2. Refactoring.

--------------------------------------------------------------------------------
drkns 2024-08-10 17:24:40+01:00 - build 6355

1. Improve short names usage in executor.

--------------------------------------------------------------------------------
drkns 2024-08-04 20:51:46+01:00 - build 6354

1. Refactoring.

--------------------------------------------------------------------------------
drkns 2024-07-28 14:35:18+01:00 - build 6353

1. Minor fixes & refactoring.

--------------------------------------------------------------------------------
MZK 2024-07-21 18:59:11-04:00 - build 6352

1. Do not change the number of bytes per line in Hex View when not in Hex mode.

--------------------------------------------------------------------------------
drkns 2024-07-21 12:25:59+01:00 - build 6351

1. Continue 6348.1.

--------------------------------------------------------------------------------
drkns 2024-07-20 21:38:24+01:00 - build 6350

1. Correction of 5441.

--------------------------------------------------------------------------------
drkns 2024-07-20 09:18:53+01:00 - build 6349

1. Continue 6348.2.

--------------------------------------------------------------------------------
drkns 2024-07-18 01:23:45+01:00 - build 6348
