@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 2024-08-17 11:35:12+01:00 - build 6360
+
+1. Continue 6359.
+
+--------------------------------------------------------------------------------
 drkns 2024-08-15 01:55:21+01:00 - build 6359
 
 1. gh-864: Confusion between ² and ' keys on AZERTY (french) keyboard for Macro Shortcuts.
